// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackupPage should create a backup and should be visible in the table: add backup modal 1`] = `null`;

exports[`BackupPage should create a backup and should be visible in the table: initial table state 1`] = `
<div
  class="ant-table ant-table-empty css-dev-only-do-not-override-98ntnt"
>
  <div
    class="ant-table-container"
  >
    <div
      class="ant-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup>
          <col
            style="width: 200px;"
          />
          <col
            style="width: 200px;"
          />
          <col
            style="width: 200px;"
          />
          <col
            style="width: 200px;"
          />
          <col
            style="width: 100px;"
          />
        </colgroup>
        <thead
          class="ant-table-thead"
        >
          <tr>
            <th
              aria-label="Filename"
              class="ant-table-cell ant-table-column-has-sorters react-resizable"
              scope="col"
              tabindex="0"
            >
              <div
                class="ant-table-filter-column"
              >
                <span
                  class="ant-table-column-title"
                >
                  <div
                    class="ant-table-column-sorters"
                  >
                    <span
                      class="ant-table-column-title"
                    >
                      Filename
                    </span>
                    <span
                      class="ant-table-column-sorter ant-table-column-sorter-full"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-table-column-sorter-inner"
                      >
                        <span
                          aria-label="caret-up"
                          class="anticon anticon-caret-up ant-table-column-sorter-up"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="caret-up"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 1024 1024"
                            width="1em"
                          >
                            <path
                              d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                            />
                          </svg>
                        </span>
                        <span
                          aria-label="caret-down"
                          class="anticon anticon-caret-down ant-table-column-sorter-down"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="caret-down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 1024 1024"
                            width="1em"
                          >
                            <path
                              d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                </span>
                <span
                  class="ant-dropdown-trigger ant-table-filter-trigger"
                  role="button"
                  tabindex="-1"
                >
                  <span
                    aria-label="filter"
                    class="anticon anticon-filter"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="filter"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              Size
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              SHA256
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              aria-label="Create UTC"
              class="ant-table-cell ant-table-column-has-sorters react-resizable"
              scope="col"
              tabindex="0"
            >
              <div
                class="ant-table-column-sorters"
              >
                <span
                  class="ant-table-column-title"
                >
                  Create UTC
                </span>
                <span
                  class="ant-table-column-sorter ant-table-column-sorter-full"
                >
                  <span
                    aria-hidden="true"
                    class="ant-table-column-sorter-inner"
                  >
                    <span
                      aria-label="caret-up"
                      class="anticon anticon-caret-up ant-table-column-sorter-up"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="caret-up"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                        />
                      </svg>
                    </span>
                    <span
                      aria-label="caret-down"
                      class="anticon anticon-caret-down ant-table-column-sorter-down"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="caret-down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </div>
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              Actions
              <span
                class="react-resizable-handle"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class="ant-table-tbody"
        >
          <tr
            class="ant-table-placeholder"
          >
            <td
              class="ant-table-cell"
              colspan="5"
            >
              <div
                class="css-dev-only-do-not-override-98ntnt ant-empty ant-empty-normal"
              >
                <div
                  class="ant-empty-image"
                >
                  <svg
                    height="41"
                    viewBox="0 0 64 41"
                    width="64"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title>
                      Simple Empty
                    </title>
                    <g
                      fill="none"
                      fill-rule="evenodd"
                      transform="translate(0 1)"
                    >
                      <ellipse
                        cx="32"
                        cy="33"
                        fill="#f5f5f5"
                        rx="32"
                        ry="7"
                      />
                      <g
                        fill-rule="nonzero"
                        stroke="#d9d9d9"
                      >
                        <path
                          d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                        />
                        <path
                          d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                          fill="#fafafa"
                        />
                      </g>
                    </g>
                  </svg>
                </div>
                <div
                  class="ant-empty-description"
                >
                  No data
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`BackupPage should delete a backup and should be removed from the table: final table state after deletion 1`] = `
<div
  class="ant-table css-dev-only-do-not-override-98ntnt"
>
  <div
    class="ant-table-container"
  >
    <div
      class="ant-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup>
          <col
            style="width: 200px;"
          />
          <col
            style="width: 200px;"
          />
          <col
            style="width: 200px;"
          />
          <col
            style="width: 200px;"
          />
          <col
            style="width: 100px;"
          />
        </colgroup>
        <thead
          class="ant-table-thead"
        >
          <tr>
            <th
              aria-label="Filename"
              class="ant-table-cell ant-table-column-has-sorters react-resizable"
              scope="col"
              tabindex="0"
            >
              <div
                class="ant-table-filter-column"
              >
                <span
                  class="ant-table-column-title"
                >
                  <div
                    class="ant-table-column-sorters"
                  >
                    <span
                      class="ant-table-column-title"
                    >
                      Filename
                    </span>
                    <span
                      class="ant-table-column-sorter ant-table-column-sorter-full"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-table-column-sorter-inner"
                      >
                        <span
                          aria-label="caret-up"
                          class="anticon anticon-caret-up ant-table-column-sorter-up"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="caret-up"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 1024 1024"
                            width="1em"
                          >
                            <path
                              d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                            />
                          </svg>
                        </span>
                        <span
                          aria-label="caret-down"
                          class="anticon anticon-caret-down ant-table-column-sorter-down"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="caret-down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 1024 1024"
                            width="1em"
                          >
                            <path
                              d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                </span>
                <span
                  class="ant-dropdown-trigger ant-table-filter-trigger"
                  role="button"
                  tabindex="-1"
                >
                  <span
                    aria-label="filter"
                    class="anticon anticon-filter"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="filter"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              Size
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              SHA256
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              aria-label="Create UTC"
              class="ant-table-cell ant-table-column-has-sorters react-resizable"
              scope="col"
              tabindex="0"
            >
              <div
                class="ant-table-column-sorters"
              >
                <span
                  class="ant-table-column-title"
                >
                  Create UTC
                </span>
                <span
                  class="ant-table-column-sorter ant-table-column-sorter-full"
                >
                  <span
                    aria-hidden="true"
                    class="ant-table-column-sorter-inner"
                  >
                    <span
                      aria-label="caret-up"
                      class="anticon anticon-caret-up ant-table-column-sorter-up"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="caret-up"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                        />
                      </svg>
                    </span>
                    <span
                      aria-label="caret-down"
                      class="anticon anticon-caret-down ant-table-column-sorter-down"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="caret-down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </div>
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              Actions
              <span
                class="react-resizable-handle"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class="ant-table-tbody"
        >
          <tr
            class="ant-table-row ant-table-row-level-0"
            data-row-key="test-backup-1"
          >
            <td
              class="ant-table-cell"
            >
              <div
                data-testid="backup-filename"
              >
                test-backup-1
              </div>
            </td>
            <td
              class="ant-table-cell"
            >
              <div>
                428 KB
              </div>
            </td>
            <td
              class="ant-table-cell"
            >
              <div
                style="display: flex; align-items: center; gap: 8px; font-family: monospace;"
              >
                <span>
                  ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
                </span>
                <span
                  aria-label="eye"
                  class="anticon anticon-eye"
                  role="img"
                  style="cursor: pointer;"
                  tabindex="-1"
                  title="Show SHA256"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="eye"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                    />
                  </svg>
                </span>
              </div>
            </td>
            <td
              class="ant-table-cell"
            >
              <div>
                1st Jan 2025, 05:30
              </div>
            </td>
            <td
              class="ant-table-cell"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-text ant-btn-icon-only ant-dropdown-trigger"
                role="backup-action-menu"
                style="font-size: 16px;"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="more"
                    class="anticon anticon-more"
                    role="img"
                    style="font-size: 20px;"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="more"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
          <tr
            class="ant-table-row ant-table-row-level-0"
            data-row-key="test-backup-2"
          >
            <td
              class="ant-table-cell"
            >
              <div
                data-testid="backup-filename"
              >
                test-backup-2
              </div>
            </td>
            <td
              class="ant-table-cell"
            >
              <div>
                428 KB
              </div>
            </td>
            <td
              class="ant-table-cell"
            >
              <div
                style="display: flex; align-items: center; gap: 8px; font-family: monospace;"
              >
                <span>
                  ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
                </span>
                <span
                  aria-label="eye"
                  class="anticon anticon-eye"
                  role="img"
                  style="cursor: pointer;"
                  tabindex="-1"
                  title="Show SHA256"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="eye"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                    />
                  </svg>
                </span>
              </div>
            </td>
            <td
              class="ant-table-cell"
            >
              <div>
                2nd Jan 2025, 05:30
              </div>
            </td>
            <td
              class="ant-table-cell"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-text ant-btn-icon-only ant-dropdown-trigger"
                role="backup-action-menu"
                style="font-size: 16px;"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="more"
                    class="anticon anticon-more"
                    role="img"
                    style="font-size: 20px;"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="more"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`BackupPage should display Create Backup button 1`] = `
<button
  class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-link"
  style="font-weight: 500;"
  type="button"
>
  <span
    class="ant-btn-icon"
  >
    <span
      aria-label="plus-square"
      class="anticon anticon-plus-square"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="plus-square"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
        />
        <path
          d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
        />
      </svg>
    </span>
  </span>
  <span>
    Create Backup
  </span>
</button>
`;

exports[`BackupPage should download a backup: final table state after download 1`] = `
<div
  class="ant-table css-dev-only-do-not-override-98ntnt"
>
  <div
    class="ant-table-container"
  >
    <div
      class="ant-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup>
          <col
            style="width: 200px;"
          />
          <col
            style="width: 200px;"
          />
          <col
            style="width: 200px;"
          />
          <col
            style="width: 200px;"
          />
          <col
            style="width: 100px;"
          />
        </colgroup>
        <thead
          class="ant-table-thead"
        >
          <tr>
            <th
              aria-label="Filename"
              class="ant-table-cell ant-table-column-has-sorters react-resizable"
              scope="col"
              tabindex="0"
            >
              <div
                class="ant-table-filter-column"
              >
                <span
                  class="ant-table-column-title"
                >
                  <div
                    class="ant-table-column-sorters"
                  >
                    <span
                      class="ant-table-column-title"
                    >
                      Filename
                    </span>
                    <span
                      class="ant-table-column-sorter ant-table-column-sorter-full"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-table-column-sorter-inner"
                      >
                        <span
                          aria-label="caret-up"
                          class="anticon anticon-caret-up ant-table-column-sorter-up"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="caret-up"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 1024 1024"
                            width="1em"
                          >
                            <path
                              d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                            />
                          </svg>
                        </span>
                        <span
                          aria-label="caret-down"
                          class="anticon anticon-caret-down ant-table-column-sorter-down"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="caret-down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 1024 1024"
                            width="1em"
                          >
                            <path
                              d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                </span>
                <span
                  class="ant-dropdown-trigger ant-table-filter-trigger"
                  role="button"
                  tabindex="-1"
                >
                  <span
                    aria-label="filter"
                    class="anticon anticon-filter"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="filter"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              Size
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              SHA256
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              aria-label="Create UTC"
              class="ant-table-cell ant-table-column-has-sorters react-resizable"
              scope="col"
              tabindex="0"
            >
              <div
                class="ant-table-column-sorters"
              >
                <span
                  class="ant-table-column-title"
                >
                  Create UTC
                </span>
                <span
                  class="ant-table-column-sorter ant-table-column-sorter-full"
                >
                  <span
                    aria-hidden="true"
                    class="ant-table-column-sorter-inner"
                  >
                    <span
                      aria-label="caret-up"
                      class="anticon anticon-caret-up ant-table-column-sorter-up"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="caret-up"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                        />
                      </svg>
                    </span>
                    <span
                      aria-label="caret-down"
                      class="anticon anticon-caret-down ant-table-column-sorter-down"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="caret-down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </div>
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              Actions
              <span
                class="react-resizable-handle"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class="ant-table-tbody"
        >
          <tr
            class="ant-table-row ant-table-row-level-0"
            data-row-key="test-backup-1"
          >
            <td
              class="ant-table-cell"
            >
              <div
                data-testid="backup-filename"
              >
                test-backup-1
              </div>
            </td>
            <td
              class="ant-table-cell"
            >
              <div>
                428 KB
              </div>
            </td>
            <td
              class="ant-table-cell"
            >
              <div
                style="display: flex; align-items: center; gap: 8px; font-family: monospace;"
              >
                <span>
                  ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
                </span>
                <span
                  aria-label="eye"
                  class="anticon anticon-eye"
                  role="img"
                  style="cursor: pointer;"
                  tabindex="-1"
                  title="Show SHA256"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="eye"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                    />
                  </svg>
                </span>
              </div>
            </td>
            <td
              class="ant-table-cell"
            >
              <div>
                1st Jan 2025, 05:30
              </div>
            </td>
            <td
              class="ant-table-cell"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-text ant-btn-icon-only ant-dropdown-trigger"
                role="backup-action-menu"
                style="font-size: 16px;"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="more"
                    class="anticon anticon-more"
                    role="img"
                    style="font-size: 20px;"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="more"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
          <tr
            class="ant-table-row ant-table-row-level-0"
            data-row-key="test-backup-2"
          >
            <td
              class="ant-table-cell"
            >
              <div
                data-testid="backup-filename"
              >
                test-backup-2
              </div>
            </td>
            <td
              class="ant-table-cell"
            >
              <div>
                428 KB
              </div>
            </td>
            <td
              class="ant-table-cell"
            >
              <div
                style="display: flex; align-items: center; gap: 8px; font-family: monospace;"
              >
                <span>
                  ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
                </span>
                <span
                  aria-label="eye"
                  class="anticon anticon-eye"
                  role="img"
                  style="cursor: pointer;"
                  tabindex="-1"
                  title="Show SHA256"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="eye"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                    />
                  </svg>
                </span>
              </div>
            </td>
            <td
              class="ant-table-cell"
            >
              <div>
                2nd Jan 2025, 05:30
              </div>
            </td>
            <td
              class="ant-table-cell"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-text ant-btn-icon-only ant-dropdown-trigger"
                role="backup-action-menu"
                style="font-size: 16px;"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="more"
                    class="anticon anticon-more"
                    role="img"
                    style="font-size: 20px;"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="more"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`BackupPage should render the BackupPage: initial table state 1`] = `
<div>
  <main
    class="ant-layout-content pageContainer css-dev-only-do-not-override-98ntnt"
    id="backups"
  >
    <div
      class="pageTitleContainer ant-flex css-dev-only-do-not-override-98ntnt ant-flex-wrap-wrap ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
    >
      <span
        class="ant-typography css-dev-only-do-not-override-98ntnt"
        data-testid="heading"
        style="font-weight: 600; font-size: 16px;"
      >
        <div
          class="ant-flex css-dev-only-do-not-override-98ntnt ant-flex-align-center"
          style="gap: 10px;"
        >
          <span
            class="ant-typography css-dev-only-do-not-override-98ntnt"
          >
            Backups
          </span>
          <span
            aria-label="redo"
            class="anticon anticon-redo cursor-pointer"
            role="img"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              data-icon="redo"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M758.2 839.1C851.8 765.9 912 651.9 912 523.9 912 303 733.5 124.3 512.6 124 291.4 123.7 112 302.8 112 523.9c0 125.2 57.5 236.9 147.6 310.2 3.5 2.8 8.6 2.2 11.4-1.3l39.4-50.5c2.7-3.4 2.1-8.3-1.2-11.1-8.1-6.6-15.9-13.7-23.4-21.2a318.64 318.64 0 01-68.6-101.7C200.4 609 192 567.1 192 523.9s8.4-85.1 25.1-124.5c16.1-38.1 39.2-72.3 68.6-101.7 29.4-29.4 63.6-52.5 101.7-68.6C426.9 212.4 468.8 204 512 204s85.1 8.4 124.5 25.1c38.1 16.1 72.3 39.2 101.7 68.6 29.4 29.4 52.5 63.6 68.6 101.7 16.7 39.4 25.1 81.3 25.1 124.5s-8.4 85.1-25.1 124.5a318.64 318.64 0 01-68.6 101.7c-9.3 9.3-19.1 18-29.3 26L668.2 724a8 8 0 00-14.1 3l-39.6 162.2c-1.2 5 2.6 9.9 7.7 9.9l167 .8c6.7 0 10.5-7.7 6.3-12.9l-37.3-47.9z"
              />
            </svg>
          </span>
        </div>
      </span>
      <button
        class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-link"
        style="font-weight: 500;"
        type="button"
      >
        <span
          class="ant-btn-icon"
        >
          <span
            aria-label="plus-square"
            class="anticon anticon-plus-square"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="plus-square"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
              />
              <path
                d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
              />
            </svg>
          </span>
        </span>
        <span>
          Create Backup
        </span>
      </button>
    </div>
    <div
      class="pageContent"
    >
      <div
        class="ant-table-wrapper css-dev-only-do-not-override-98ntnt"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-98ntnt"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table css-dev-only-do-not-override-98ntnt"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        style="width: 200px;"
                      />
                      <col
                        style="width: 200px;"
                      />
                      <col
                        style="width: 200px;"
                      />
                      <col
                        style="width: 200px;"
                      />
                      <col
                        style="width: 100px;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          aria-label="Filename"
                          class="ant-table-cell ant-table-column-has-sorters react-resizable"
                          scope="col"
                          tabindex="0"
                        >
                          <div
                            class="ant-table-filter-column"
                          >
                            <span
                              class="ant-table-column-title"
                            >
                              <div
                                class="ant-table-column-sorters"
                              >
                                <span
                                  class="ant-table-column-title"
                                >
                                  Filename
                                </span>
                                <span
                                  class="ant-table-column-sorter ant-table-column-sorter-full"
                                >
                                  <span
                                    aria-hidden="true"
                                    class="ant-table-column-sorter-inner"
                                  >
                                    <span
                                      aria-label="caret-up"
                                      class="anticon anticon-caret-up ant-table-column-sorter-up"
                                      role="img"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="caret-up"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="0 0 1024 1024"
                                        width="1em"
                                      >
                                        <path
                                          d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                        />
                                      </svg>
                                    </span>
                                    <span
                                      aria-label="caret-down"
                                      class="anticon anticon-caret-down ant-table-column-sorter-down"
                                      role="img"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="caret-down"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="0 0 1024 1024"
                                        width="1em"
                                      >
                                        <path
                                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                </span>
                              </div>
                            </span>
                            <span
                              class="ant-dropdown-trigger ant-table-filter-trigger"
                              role="button"
                              tabindex="-1"
                            >
                              <span
                                aria-label="filter"
                                class="anticon anticon-filter"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="filter"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                          <span
                            class="react-resizable-handle"
                          />
                        </th>
                        <th
                          class="ant-table-cell react-resizable"
                          scope="col"
                        >
                          Size
                          <span
                            class="react-resizable-handle"
                          />
                        </th>
                        <th
                          class="ant-table-cell react-resizable"
                          scope="col"
                        >
                          SHA256
                          <span
                            class="react-resizable-handle"
                          />
                        </th>
                        <th
                          aria-label="Create UTC"
                          class="ant-table-cell ant-table-column-has-sorters react-resizable"
                          scope="col"
                          tabindex="0"
                        >
                          <div
                            class="ant-table-column-sorters"
                          >
                            <span
                              class="ant-table-column-title"
                            >
                              Create UTC
                            </span>
                            <span
                              class="ant-table-column-sorter ant-table-column-sorter-full"
                            >
                              <span
                                aria-hidden="true"
                                class="ant-table-column-sorter-inner"
                              >
                                <span
                                  aria-label="caret-up"
                                  class="anticon anticon-caret-up ant-table-column-sorter-up"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="caret-up"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="0 0 1024 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                    />
                                  </svg>
                                </span>
                                <span
                                  aria-label="caret-down"
                                  class="anticon anticon-caret-down ant-table-column-sorter-down"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="caret-down"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="0 0 1024 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                          <span
                            class="react-resizable-handle"
                          />
                        </th>
                        <th
                          class="ant-table-cell react-resizable"
                          scope="col"
                        >
                          Actions
                          <span
                            class="react-resizable-handle"
                          />
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="test-backup-1"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            data-testid="backup-filename"
                          >
                            test-backup-1
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            428 KB
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            style="display: flex; align-items: center; gap: 8px; font-family: monospace;"
                          >
                            <span>
                              ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
                            </span>
                            <span
                              aria-label="eye"
                              class="anticon anticon-eye"
                              role="img"
                              style="cursor: pointer;"
                              tabindex="-1"
                              title="Show SHA256"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="eye"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                                />
                              </svg>
                            </span>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            1st Jan 2025, 05:30
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <button
                            class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-text ant-btn-icon-only ant-dropdown-trigger"
                            role="backup-action-menu"
                            style="font-size: 16px;"
                            type="button"
                          >
                            <span
                              class="ant-btn-icon"
                            >
                              <span
                                aria-label="more"
                                class="anticon anticon-more"
                                role="img"
                                style="font-size: 20px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="more"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="test-backup-2"
                      >
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            data-testid="backup-filename"
                          >
                            test-backup-2
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            428 KB
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            style="display: flex; align-items: center; gap: 8px; font-family: monospace;"
                          >
                            <span>
                              ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••
                            </span>
                            <span
                              aria-label="eye"
                              class="anticon anticon-eye"
                              role="img"
                              style="cursor: pointer;"
                              tabindex="-1"
                              title="Show SHA256"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="eye"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                                />
                              </svg>
                            </span>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            2nd Jan 2025, 05:30
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <button
                            class="ant-btn css-dev-only-do-not-override-98ntnt ant-btn-text ant-btn-icon-only ant-dropdown-trigger"
                            role="backup-action-menu"
                            style="font-size: 16px;"
                            type="button"
                          >
                            <span
                              class="ant-btn-icon"
                            >
                              <span
                                aria-label="more"
                                class="anticon anticon-more"
                                role="img"
                                style="font-size: 20px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="more"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
            <ul
              class="ant-pagination ant-table-pagination ant-table-pagination-right css-dev-only-do-not-override-98ntnt"
            >
              <li
                aria-disabled="true"
                class="ant-pagination-prev ant-pagination-disabled"
                title="Previous Page"
              >
                <button
                  class="ant-pagination-item-link"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="left"
                    class="anticon anticon-left"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="left"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li
                class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                tabindex="0"
                title="1"
              >
                <a
                  rel="nofollow"
                >
                  1
                </a>
              </li>
              <li
                aria-disabled="true"
                class="ant-pagination-next ant-pagination-disabled"
                title="Next Page"
              >
                <button
                  class="ant-pagination-item-link"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    aria-label="right"
                    class="anticon anticon-right"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="right"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </main>
  <div
    style="position: fixed; z-index: 9999; top: 16px; left: 16px; right: 16px; bottom: 16px; pointer-events: none;"
  />
</div>
`;
